--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
   "scripts": {
     "test": "npx jest --bail"
   },
+  "jest": {
+    "testEnvironment": "jsdom",
+    "transformIgnorePatterns": ["node_modules/(?!@hexlet/.*)"]
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Argentum88/frontend-testing-react-project-lvl2.git"
