--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "url": "https://github.com/Argentum88/frontend-testing-react-project-lvl2/issues"
   },
   "homepage": "https://github.com/Argentum88/frontend-testing-react-project-lvl2#readme",
-  "devDependencies": {
+  "dependencies": {
     "@babel/preset-env": "^7.14.5",
     "@babel/preset-react": "^7.14.5",
     "@hexlet/react-todo-app-with-backend": "^0.10.0",
